--- a/resume.html
+++ b/resume.html
@@ -2,125 +2,8 @@
 
 <head>
 	<meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css" />
     <title>履歴書・経歴書作成アプリ</title>
-	<style>
-        /* リセットCSS */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-		p1 {
-            color:blue;
-            text-decoration:underline;
-        }
-
-        h1 {
-			padding: 50px;
-		}
-
-        body {
-            text-align: center;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Sans",
-            "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
-            padding: 20px;
-            line-height: 1.6;
-            color: #333;
-        }
-
-        .form-container {
-            max-width: 900px;
-            margin: 0 auto;
-            background: white;
-            padding: 30px;
-            border-radius: 4px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        /* フォーム行のレイアウト */
-        .form-row {
-
-            align-items: flex-start;
-            margin-bottom: 20px;
-            padding-bottom: 20px;
-            border-bottom: 1px solid #e0e0e0;
-        }
-
-        .form-row:last-child {
-            border-bottom: none;
-        }
-
-        /* 左側のラベル部分 */
-        .form-label {
-            width: 200px;
-            min-width: 200px;
-            padding-right: 20px;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .form-label label {
-            font-weight: 500;
-            color: #333;
-            font-size: 0.95em;
-        }
-
-        /* 右側の入力欄部分 */
-        .form-input-group {
-            flex: 1;
-            min-width: 0;
-        }
-
-        /* 名前入力欄の横並び */
-        .name-input-wrapper {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            margin-right: 20px;
-        }
-
-        .name-input-wrapper:last-child {
-            
-        }
-
-        .textbox {
-            width: 300px;
-            padding: 3px 7px;
-            border-radius: 5px;
-            border: 2px solid #ccc;
-        }
-
-        .textbox:focus {
-            outline: 0;
-            border: 2px solid #2196f3;
-        }
-
-        .address_textbox {
-            width: 85px;
-        }
-
-        .name_textbox {
-            margin-right: 20px;
-        }
-
-        [type="number"]::-webkit-outer-spin-button, 
-        [type="number"]::-webkit-inner-spin-button { 
-        -webkit-appearance: none; 
-        margin: 0; 
-        }
-
-        .textarea {
-            border-radius: 5px;
-            border: 2px solid #ccc;
-        }
-
-        .textarea:focus {
-            overflow: auto;
-        }
-
-	</style>
 </head>
 
 <body>
