Add related Login Page

--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="form-container">
-    <p1>戻る</p1>
+    <a href="index.html">戻る</a>
 	<h1>履歴書作成</h1>
     <!-- 個人情報作成欄 -->
     <form action="/form.php" method="post">
