--- a/SignUp.html
+++ b/SignUp.html
@@ -1,41 +1,123 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>新規登録 - 履歴書作成アプリ</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="login-container">
+      <h1 style="margin-bottom: 30px">
+        履歴書作成アプリ
+      </h1>
+      <h2 style="text-align: center; margin-bottom: 30px">新規登録</h2>
 
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css" />
-	<title>履歴書・経歴書作成アプリ</title>
-</head>
+      <div id="errorMessage" class="error-message"></div>
+      <div id="successMessage" class="success-message"></div>
 
-<body>
-	<h1>新規登録</h1>
+      <form id="signupForm" class="login-form">
+        <div>
+          <label for="email">メールアドレス</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="example@mail.com"
+            required
+          />
+        </div>
+        <div>
+          <label for="password">パスワード</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="6文字以上"
+            minlength="6"
+            required
+          />
+        </div>
+        <div>
+          <label for="passwordConfirm">パスワード（確認）</label>
+          <input
+            type="password"
+            id="passwordConfirm"
+            name="passwordConfirm"
+            placeholder="同じパスワードを入力"
+            required
+          />
+        </div>
+        <button type="submit">新規登録</button>
+      </form>
 
-	<a href="index.html">戻る</a>
+      <div class="login-link">
+        既にアカウントをお持ちの方は
+        <a href="login.html">ログイン</a>
+      </div>
+    </div>
 
-	<p>メールアドレス</p>
-    <input 
-        type="text" 
-        id="username" 
-        class="textbox" 
-        placeholder="sample@co.jp">
-    <p>パスワード</p>
-    <input 
-        type="password" 
-        id="pass" 
-        class="textbox" >
-    <br>
-    <input 
-        type="checkbox" 
-        id="showpassword" 
-        onchange="showOrHide()" 
-        class="margin">
-        <span>パスワードを表示する</span>
-        <br>
-        <input 
-            type="button" 
-            value="新規登録する" 
-            class="button margin" 
-            onclick="signUp()">
-	<script src="script.js"></script>
-</body>
+    <!-- Supabase JSライブラリ -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- 設定ファイル -->
+    <script src="config.js"></script>
+    <!-- 認証用JavaScript -->
+    <script src="auth.js"></script>
+    <script>
+      // 新規登録フォームの処理
+      document
+        .getElementById("signupForm")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
 
+          const email = document.getElementById("email").value;
+          const password = document.getElementById("password").value;
+          const passwordConfirm =
+            document.getElementById("passwordConfirm").value;
+          const errorMessage = document.getElementById("errorMessage");
+          const successMessage = document.getElementById("successMessage");
+
+          // メッセージを非表示
+          errorMessage.classList.remove("show");
+          successMessage.classList.remove("show");
+          errorMessage.textContent = "";
+          successMessage.textContent = "";
+
+          // パスワード確認
+          if (password !== passwordConfirm) {
+            errorMessage.textContent = "パスワードが一致しません。";
+            errorMessage.classList.add("show");
+            return;
+          }
+
+          try {
+            // Supabaseで新規登録
+            const { data, error } = await supabaseClient.auth.signUp({
+              email: email,
+              password: password,
+            });
+
+            if (error) {
+              // エラーが発生した場合
+              errorMessage.textContent = error.message;
+              errorMessage.classList.add("show");
+            } else {
+              // 登録成功
+              successMessage.textContent =
+                "登録が完了しました！ログインページに移動します。";
+              successMessage.classList.add("show");
+
+              // 2秒後にログインページにリダイレクト
+              setTimeout(() => {
+                window.location.href = "login.html";
+              }, 2000);
+            }
+          } catch (err) {
+            // 予期しないエラー
+            errorMessage.textContent = "登録に失敗しました。";
+            errorMessage.classList.add("show");
+          }
+        });
+    </script>
+  </body>
 </html>
