Add Get Picture

--- a/resume.html
+++ b/resume.html
@@ -141,6 +141,9 @@
             </div>
             <div id="checkMail"></div>
         </div>
+        <div class="form-row">
+            <input id="inputFiletype" type="file" accept="image/*">
+        </div>
 
         <!-- 学歴欄作成欄 -->
         <h2>学歴</h2>
