--- a/login.html
+++ b/login.html
@@ -20,62 +20,7 @@
 
       /* 背景の三角形 */     
       .background-triangle {
-        display: table;
-        width: 100%;
-        height: 500px;
         background-color: #b0c4de;
-        transform: skewY(-10deg);
-      }
-      
-      .background-triangle > * {
-        transform: skewY(10deg);
-      }
-
-      input {
-        width: 100%;
-        padding: 10px 15px;
-        border: 2px solid;
-        border-radius: 25px;
-        font-size: 16px;
-        box-sizing: border-box;
-      }
-
-      input:focus {
-        outline: none;
-        box-shadow: 0 0 5px rgba(255, 192, 203, 0.5);
-      }
-
-      button {
-        margin: 20px auto;
-        display: block;
-        width: 100%;
-        max-width: 250px;
-        padding: .5em 2em;
-        border: none;
-        border-radius: 5px;
-        background-color: #2589d0;
-        color: #fff;
-        font-weight: 600;
-        font-size: 1em;
-      }
-
-      button:hover {
-        animation: anima-button-41 2s linear infinite;
-      }
-
-      @keyframes anima-button-41 {
-        7% {
-          transform: translateY(-15px);
-        }
-        15% {
-          transform: translateY(0);
-        }
-        20% {
-          transform: translateY(-7px);
-        }
-        25% {
-          transform: translateY(0);
-        }
       }
 
       .login-content-wrapper {
@@ -191,6 +136,7 @@
                     type="email"
                     id="email"
                     name="email"
+                    class="bigform"
                     placeholder="example@mail.com"
                     required
                   /></td>
@@ -201,6 +147,7 @@
                     type="password"
                     id="password"
                     name="password"
+                    class="bigform"
                     placeholder="パスワードを入力"
                     required
                   /></td>
@@ -208,7 +155,10 @@
               </table>
               
               <div id="errorMessage" class="error-message"></div>
-              <button type="submit" id="loginButton">ログイン</button>
+              <button 
+                type="submit" 
+                id="loginButton" 
+                class="bigbutton">ログイン</button>
             </form>
 
             <div class="signup-link">
