--- a/resume.html
+++ b/resume.html
@@ -151,11 +151,14 @@
             </div>
             <div id="checkMail"></div>
         </div>
+        <!-- 写真アップロード欄 -->
         <div class="form-row">
             <input 
                 id="imageInput" 
                 type="file" 
                 accept="image/*">
+            <br>
+            <img id="preview" alt="プレビュー" style="display: none;">
         </div>
 
         <!-- 学歴欄作成欄 -->
@@ -268,6 +271,29 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+        // 画像取得
+        const imageInput = document.getElementById('imageInput');
+        const preview = document.getElementById('preview');
+
+        imageInput.addEventListener('change', function(e) {
+        const file = e.target.files[0];
+
+        if (file && file.type.startsWith('image/')) {
+            const reader = new FileReader();
+
+            reader.onload = function(e) {
+            preview.src = e.target.result;
+            preview.style.display = 'block';
+            };
+
+            reader.readAsDataURL(file);
+        } else {
+            preview.src = '';
+            preview.style.display = 'none';
+        }
+        });
+    </script>
 </body>
 
 </html>
