Add flexible property

--- a/login.html
+++ b/login.html
@@ -69,6 +69,7 @@
 
         .SkyAndTree img {
           max-width: 500px;
+          animation :imgfade 4s infinite;
         }
       }
 
@@ -76,6 +77,7 @@
       @media (max-width: 768px) {
         .SkyAndTree img {
           max-width: 100%;
+          animation :imgfade 4s infinite;
         }
 
         .loginForm {
