--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,18 @@
         width: 100%;
         max-width: 600px;
         height: auto;
+        aspect-ratio: 16 / 9;
+        object-fit: cover;
         display: block;
+        animation :imgfade 4s infinite;
+      }
+
+      @keyframes imgfade {
+        0% {opacity: 0;}
+        25% {opacity: 1;}
+        50% {opacity: 1;}
+        75% {opacity: 1;}
+        100% {opacity: 0;}
       }
 
       .signupForm {
@@ -60,6 +71,9 @@
 
         .OfficeWork img {
           max-width: 500px;
+          animation :imgfade 4s infinite;
+          aspect-ratio: 16 / 9;
+          object-fit: cover;
         }
       }
 
@@ -67,6 +81,9 @@
       @media (max-width: 768px) {
         .OfficeWork img {
           max-width: 100%;
+          animation :imgfade 4s infinite;
+          aspect-ratio: 16 / 9;
+          object-fit: cover;
         }
 
         .signupForm {
@@ -125,7 +142,7 @@
 
         <div class="signup-container-wrapper">
           <div class="OfficeWork">
-            <img src="/事務作業.jpg" alt="事務作業" />
+            <img src="/事務作業.jpg" id="slide-img_signup" alt="事務作業" />
           </div>
           <div class="signupform"></div>
             <form id="signupForm" class="signupForm">
@@ -244,6 +261,23 @@
             errorMessage.classList.add("show");
           }
         });
+
+        // 新規登録画面のスライドショー
+        const images = ["/事務作業.jpg", "/オフィスビル.jpg", "/ポイント.jpg"];
+        let currentIndex = 0;
+        document.getElementById("slide-img_signup").src = images[currentIndex];
+
+        function slideshow_timer(){
+            if(currentIndex == 2){
+                currentIndex = 0;
+                document.getElementById("slide-img_signup").src = images[currentIndex];
+            }else{
+                currentIndex++;
+                document.getElementById("slide-img_signup").src = images[currentIndex];
+            }
+        }
+
+        setInterval(slideshow_timer, 4000);
     </script>
   </body>
 </html>
