--- a/login.html
+++ b/login.html
@@ -45,6 +45,7 @@
         height: auto;
         display: block;
         animation :imgfade 4s infinite;
+        border-radius: 10%;
       }
 
       @keyframes imgfade {
@@ -70,6 +71,7 @@
         .SkyAndTree img {
           max-width: 500px;
           animation :imgfade 4s infinite;
+          border-radius: 10%;
         }
       }
 
@@ -78,6 +80,7 @@
         .SkyAndTree img {
           max-width: 100%;
           animation :imgfade 4s infinite;
+          border-radius: 10%;
         }
 
         .loginForm {
