fix signup.html rounded corner

--- a/signup.html
+++ b/signup.html
@@ -47,6 +47,7 @@
         object-fit: cover;
         display: block;
         animation :imgfade 4s infinite;
+        border-radius: 10%;
       }
 
       @keyframes imgfade {
@@ -74,6 +75,7 @@
           animation :imgfade 4s infinite;
           aspect-ratio: 16 / 9;
           object-fit: cover;
+          border-radius: 10%;
         }
       }
 
@@ -84,6 +86,7 @@
           animation :imgfade 4s infinite;
           aspect-ratio: 16 / 9;
           object-fit: cover;
+          border-radius: 10%;
         }
 
         .signupForm {
